src/objects/Lymph_Nodes__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Nodes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Nodes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Axillary_Nodes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Axillary Nodes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cluster_Detection_Result__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cluster Detection Result</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Detection_Result__c</fullName>
        <label>Detection Result</label>
        <picklist>
            <picklistValues>
                <fullName>single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cluster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>focus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not reported</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Examined__c</fullName>
        <label>Examined</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extramodal_Extension__c</fullName>
        <label>Extramodal Extension</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Focus_Detection_Result__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Focus Detection Result</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Letarality__c</fullName>
        <label>Letarality</label>
        <picklist>
            <picklistValues>
                <fullName>Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Right</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <controllingField>Node_Checkbox_Value__c</controllingField>
            <picklistValues>
                <fullName>Unknown/not indicated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supraclavicular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axillary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infraclavicular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal mammary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upper inner quadrant (breast)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upper outer quadrant (breast)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lower inner quadrant (breast)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lower outer quadrant (breast)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axillary tail of breast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overlapping lesion of breast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central (breast)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subareolar region (breast)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Method_of_Detection__c</fullName>
        <label>Method of Detection</label>
        <picklist>
            <picklistValues>
                <fullName>IHC only</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>IHC + H&amp;E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H&amp;E only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Node_Checkbox_Value__c</fullName>
        <label>Nodes Checkbox Value</label>
        <picklist>
            <picklistValues>
                <fullName>Sentinel Nodes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axillary Nodes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Nodes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Not_reported_Detection_Result__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not reported Detection Result</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Positive__c</fullName>
        <label>Positive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_Surgery_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Post Surgery Summary</label>
        <referenceTo>Post_Surgaory_Summary__c</referenceTo>
        <relationshipLabel>Lymph Nodes</relationshipLabel>
        <relationshipName>Lymph_Nodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Procedure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Procedure</label>
        <referenceTo>Procedure__c</referenceTo>
        <relationshipLabel>Lymph Nodes</relationshipLabel>
        <relationshipName>Lymph_Nodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sentinel_Nodes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sentinel Nodes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Single_Detection_Result__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Single Detection Result</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Size_of_Largest_Tumor__c</fullName>
        <label>Size of Largest Tumor</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;1mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;1cm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reported</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specify</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Specific_Size_of_Largest_Tumor__c</fullName>
        <label>Specific Size of Largest Tumor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tumor_Size_Measurement_Unit__c</fullName>
        <label>Tumor Size Measurement Unit</label>
        <picklist>
            <picklistValues>
                <fullName>MM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pg_Lymph_node_Id__c</fullName>
        <label>pg_Lymph node _Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Lymph Node</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Lymph Nodes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lymph Nodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>